# my-zip-file

./: .gitignore  CMakeLists.txt  README.md  my_archive.h  my_tar.h
test/: CMakeLists.txt  my_archive_test.cc  test.cc
test/input/: invalid_file_small_that_512.tar  multi_file_without_dir.tar  single_file_513byte.tar  tar_1.tar  test.tar
test/test_data_dir/: 한글 디렉터리 이름.tar
test/test_data_dir/한글 디렉터리 이름/: 한글 파일 이름.txt
test/test_data_tar/: multi_file_with_dir.tar  single_file_0byte.tar  single_file_1024byte.tar  single_file_1025byte.tar  single_file_1byte.tar  single_file_512byte.tar  한글 파일 이름.tar
